--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
